minimal_k8s_sidecar_demo/sidecar-chart/wallarm-sidecar/templates/myapp-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: myapp
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - sidecar.example.com
  rules:
  - host: sidecar.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: myapp
          servicePort: 80
